--- a/vignettes/qpAdm.Rmd
+++ b/vignettes/qpAdm.Rmd
@@ -10,6 +10,9 @@ vignette: >
 ---
 
 ```{r setup, include = FALSE}
+evaluate <- .Platform$OS.type == "unix" && system("which qpDstat", ignore.stdout = TRUE) == 0 && Sys.getenv("TRAVIS_R_VERSION") == ""
+
+Sys.getenv("TRAVIS_R_VERSION")
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
