--- a/vignettes/qpAdm.Rmd
+++ b/vignettes/qpAdm.Rmd
@@ -128,10 +128,9 @@ First, let's download and install a development version of _admixr_ to
 get access to the new features, and download a small example data set:
 
 ```{r, message = FALSE, warning = FALSE, results = "hide"}
-# install `devtools` if not on already your system by running:
-# install.packages("devtools")
-# this will allow installing 'admixr' from Github
-#devtools::install_github("bodkan/admixr", ref = "qpadm-rotation", force = TRUE)
+# install the latest version of 'admixr' from Gihub:
+devtools::install_github("bodkan/admixr")
+
 library(admixr)
 
 snps <- eigenstrat(download_data())
