--- a/vignettes/qpAdm.Rmd
+++ b/vignettes/qpAdm.Rmd
@@ -130,7 +130,7 @@ get access to the new features, and download a small example data set:
 ```{r, message = FALSE, warning = FALSE, results = "hide"}
 library(admixr)
 
-snps <- eigenstrat(download_data())
+snps <- eigenstrat(download_data(dirname = tempdir()))
 ```
 
 These are the individuals for which we have genotype data:
