--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -63,16 +63,16 @@ installation of ADMIXTOOLS!** You can find installation instructions
 The software runs on Linux and macOS and these are the two systems that
 _admixr_ is tested on.
 
-**Furthermore, you need to make sure that R can find ADMIXTOOLS binaries on the
-`$PATH`.** If this is not the case, running `library(admixr)` will show a
-warning message with instructions on how to fix this.
+**Furthermore, you also need to make sure that R can find ADMIXTOOLS
+binaries on the `$PATH`.** You can achieve this by specifying
+`PATH=<path to the location of ADMIXTOOLS programs>` in the
+`.Renviron` file.
 
-To install *admixr* from GitHub you need to install the package `devtools`
-first. To do this, you can simply run (in R):
+To install *admixr* you can simply run the following command in your R
+session:
 
 ```{r, eval = FALSE}
-install.packages("devtools")
-devtools::install_github("bodkan/admixr")
+install.packages("admixr")
 ```
 
 Furthermore, if you want to follow the examples in this vignette, you will need
