--- a/vignettes/qpAdm.Rmd
+++ b/vignettes/qpAdm.Rmd
@@ -132,8 +132,15 @@ this as an illustration because:
 First, let's download and install a development version of _admixr_ to
 get access to the new features, and download a small example data set:
 
-```{r, message = FALSE, warning = FALSE, results = "hide"}
+```{r, eval = FALSE, message = FALSE, warning = FALSE, results = "hide"}
 library(admixr)
+
+snps <- eigenstrat(download_data(dirname = tempdir()))
+```
+
+
+```{r, include = FALSE}
+devtools::load_all(".")
 
 snps <- eigenstrat(download_data(dirname = tempdir()))
 ```
