--- a/vignettes/qpAdm.Rmd
+++ b/vignettes/qpAdm.Rmd
@@ -10,7 +10,7 @@ vignette: >
 ---
 
 ```{r setup, include = FALSE}
-evaluate <- .Platform$OS.type == "unix" && system("which qpDstat", ignore.stdout = TRUE) == 0 && Sys.getenv("TRAVIS_R_VERSION") == ""
+evaluate <- .Platform$OS.type == "unix" && system("which qpDstat", ignore.stdout = TRUE) == 0
 
 knitr::opts_chunk$set(
   collapse = TRUE,
@@ -132,15 +132,8 @@ this as an illustration because:
 First, let's download and install a development version of _admixr_ to
 get access to the new features, and download a small example data set:
 
-```{r, eval = FALSE, message = FALSE, warning = FALSE, results = "hide"}
+```{r,  message = FALSE, warning = FALSE, results = "hide"}
 library(admixr)
-
-snps <- eigenstrat(download_data(dirname = tempdir()))
-```
-
-
-```{r, include = FALSE}
-devtools::load_all(".")
 
 snps <- eigenstrat(download_data(dirname = tempdir()))
 ```
