--- a/vignettes/qpAdm.Rmd
+++ b/vignettes/qpAdm.Rmd
@@ -17,6 +17,8 @@ knitr::opts_chunk$set(
   comment = "#>",
   eval = evaluate
 )
+
+set.seed(42)
 ```
 
 **Note:** The functionality described in this vignette is still quite
