--- a/README.Rmd
+++ b/README.Rmd
@@ -8,7 +8,7 @@ knitr::opts_chunk$set(collapse = TRUE, comment = "#>", fig.path = "README-", eva
 <!-- badges: start -->
 [![](https://cranlogs.r-pkg.org/badges/admixr)](https://cran.r-project.org/package=admixr)
 [![R-CMD-check](https://github.com/bodkan/admixr/workflows/R-CMD-check/badge.svg)](https://github.com/bodkan/admixr/actions)
-[![Coverage status](https://codecov.io/gh/bodkan/admixr/branch/main/graph/badge.svg)](https://codecov.io/github/bodkan/admixr?branch=main)
+[![Coverage status](https://codecov.io/gh/bodkan/admixr/branch/main/graph/badge.svg)]https://app.codecov.io/github/bodkan/admixr?branch=main)
 [![Binder](http://mybinder.org/badge.svg)](http://beta.mybinder.org/v2/gh/bodkan/admixr/main?urlpath=rstudio)
 <!-- badges: end -->
 
