--- a/vignettes/02-qpAdm.Rmd
+++ b/vignettes/02-qpAdm.Rmd
@@ -216,7 +216,8 @@ Notice two things (each dot represents one examined _qpAdm_ model):
   incompatible with the data and can be rejected.
 
 ```{r, qpAdm_fig1, warning = FALSE, message = FALSE, fig.width = 6, fig.height = 4}
-library(tidyverse)
+library(dplyr)
+library(ggplot2)
 
 select(models$proportions, model, pvalue, prop1, prop2) %>%
     gather(parameter, value, -model) %>%
